# crate-jmapchat-client

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  PROJECT.md  README.md
.beads/: config_kv.json  interactions.jsonl  (+2 more)
crates/jmap-chat/: Cargo.toml
crates/jmap-chat-tauri/: Cargo.toml  tauri.conf.json
crates/jmap-chat-tauri/src/: main.rs
crates/jmap-chat/src/: auth.rs  blob.rs  client.rs  error.rs  jmap.rs  lib.rs  methods.rs  sse.rs  types.rs  utils.rs
crates/jmap-chat/src/methods/: blob.rs  chat.rs  contact.rs  custom_emoji.rs  message.rs  misc.rs  mod.rs  quota.rs  space.rs  space_ban.rs  space_invite.rs
crates/jmap-chat/src/ws/: mod.rs
crates/jmap-chat/tests/: batch_test.rs  blob_test.rs  fetch_session_test.rs  methods_test.rs  ws_test.rs
crates/jmap-chat/tests/fixtures/: README.md
crates/jmap-chat/tests/fixtures/jmap/: request_chat_get.json  response_chat_get.json  session_with_ws_and_push.json
crates/jmap-chat/tests/fixtures/methods/: chat_changes_response.json  chat_contact_changes_response.json  chat_contact_get_response.json  custom_emoji_get_response.json  custom_emoji_query_response.json  custom_emoji_set_response.json  message_create_response.json  message_get_response.json  method_error_response.json  presence_status_set_response.json  push_subscription_set_response.json  read_position_changes_response.json  read_position_get_response.json  read_position_set_response.json  space_ban_set_response.json  space_changes_response.json  space_invite_set_response.json  space_query_response.json  space_set_create_response.json  space_set_destroy_response.json  space_set_update_response.json
(+903 files in other folders)
