[package]
name = "jmapchat-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "JMAP Chat protocol types and HTTP client (auth-agnostic)"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls-manual-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
ulid = "1"
url = "2"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
