[package]
name = "jmap-chat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "JMAP Chat protocol types and HTTP client (auth-agnostic)"

[dependencies]
base64.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio-test.workspace = true
wiremock.workspace = true
